--- a/events.html
+++ b/events.html
@@ -95,7 +95,7 @@
 					<div class="storyDesc">
 						<h3>First Session FREE!</h3>
 						<p>
-							Deciding if Spiritual Coaching is right for you? Schedule a FREE session with me where we can explore your needs.
+							Deciding if Coaching is right for you? Schedule a FREE SESSION with me where we can explore your needs.
 						</p>
 					</div>
 				</div>
@@ -107,7 +107,7 @@
             <div class="eventItemDesc">
               <h3><a href="#">New Coaching Programs</a></h3>
               <p>
-                Why hire a spiritual professional? Why not just help yourself to
+                Why hire a personal development trainer? Why not just help yourself to
                 the plethora of self-help books at Barnes & Noble? Sure, you can
                 read all of the self-help books in the world, and this is a
                 perfectly fine means to learn and improve your life but unless you
@@ -121,7 +121,7 @@
               <br />
               <p>
                 Each course meets live on video chat and works one-on-one for
-                approximately 2 hours, once a week. Each lecture includes a
+                approximately 2 hours, once a week. Each session includes a
                 brief lecture, classwork, a meditation, and homework.
               </p>
 
@@ -261,7 +261,7 @@
               </time>
               <h3><a href="#">Continued Sessions</a></h3>
               <p>
-                This package of 5 sessions is for clients who have completed a program with me but want to continue our work together. Each sessions is 1 hour each and includes a meditation.
+                This package of 5 sessions is for clients who have completed a program with me but want to continue working together. Each sessions is anywhere from 1 to 2 hours in time and includes a meditation.
               </p>
 
               <!-- <a href="#" class="eventLearnMore">learn more
