--- a/events.html
+++ b/events.html
@@ -151,7 +151,7 @@
                 focus from the outside world to the inside world. In this
                 program, you will learn how to practice Inner Work to help you
                 heal from buried grief, anger, pain, and fear. The
-                result is living life with more joy and acceptance.
+                result is living life with more joy, inner peace, and self-acceptance.
               </p>
               <br />
 
@@ -159,19 +159,19 @@
                 <p>Week 1: The Spiritual Awakening Process</p>
               </div>
               <div style="width: 400px; float: left">
-                <p>Week 2: Meditation</p>
-              </div>
-              <div style="width: 400px; float: left">
-                <p>Week 3: Inner Child Work</p>
-              </div>
-              <div style="width: 400px; float: left">
                 <p>Week 4: Self-Love</p>
+              </div>
+              <div style="width: 400px; float: left">
+                <p>Week 2: Meditation</p>
               </div>
               <div style="width: 400px; float: left">
                 <p>Week 5: Shadow Work</p>
               </div>
               <div style="width: 400px; float: left">
-                <p>Week 6: Spiritual Bypassing Traps</p>
+                <p>Week 3: Inner Child Work</p>
+              </div>
+              <div style="width: 400px; float: left">
+                <p>Week 6: Bypassing Traps</p>
               </div>
 
               <!-- <a href="#" class="eventLearnMore">learn more
