--- a/events.html
+++ b/events.html
@@ -261,7 +261,7 @@
               </time>
               <h3><a href="#">Continued Sessions</a></h3>
               <p>
-                This package of 5 sessions is for clients who have completed a program with me but want to continue working together. Each sessions is anywhere from 1 to 2 hours in time and includes a meditation.
+                This package of 5 sessions is for clients who have completed a program with me but want to continue working together. Each sessions is anywhere from 1 to 2 hours in time and includes a meditation. The price of a single session is $120. A package of 5 sessions is priced at a 10% DISCOUNT! A package of 10 sessions is also available and can be purchased for $960, which is priced at a 20% DISCOUNT!!! 
               </p>
 
               <!-- <a href="#" class="eventLearnMore">learn more
