--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
 				<div class="contactInfo">
 					<h3>Contact</h3>
 					<p><i class="contactPhone"></i> (775) 343-6827</p>
-					<p><i class="contactEmail"></i> lisa.loveandpeace01@gmail.com</p>
+					<p><i class="contactEmail"></i> lisa.InnerPeaceCoaching@gmail.com</p>
 				</div>
 			</div>
 		</div>
